--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "box-office-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Tushar-Deshmukh.github.io/box-office-app",
   "dependencies": {
     "@tanstack/react-query": "^5.12.2",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
