--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://Tushar-Deshmukh.github.io/box-office-app",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tanstack/react-query": "^5.12.2",
     "gh-pages": "^6.1.0",
     "react": "^18.2.0",
