--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "box-office-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tushar-Deshmukh.github.io/box-office-app",
+  "homepage": "https://rathodpoonam.github.io/box-office",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tanstack/react-query": "^5.12.2",
-    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
@@ -57,6 +56,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.1.0"
   }
 }
